--- a/FSharp/CodeKatas/Kata02/Kata02.fsproj
+++ b/FSharp/CodeKatas/Kata02/Kata02.fsproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Library1.fs" />
+    <Compile Include="Kata02.fs" />
     <None Include="Script.fsx" />
   </ItemGroup>
   <PropertyGroup>
